Modify repo structure

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Cổng thông tin tuyển sinh của Trường Học viên Công nghệ Bưu chính Viễn thông" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>React App</title>
+  <title>Cổng thông tin tuyển sinh</title>
 </head>
 
 <body>
