--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Cổng thông tin tuyển sinh của Trường Học viên Công nghệ Bưu chính Viễn thông" />
   <script src="https://cdn.tailwindcss.com"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <title>Cổng thông tin tuyển sinh</title>
 </head>
 
